crates/mm1-sup/src/mixed/strategy/one_for_one/snapshots/mm1_sup__mixed__strategy__one_for_one__tests__mixed::strategy::one_for_one::tests::run::add_several_started_exited_max_restart_intensity_reached.snap
---
source: crates/mm1-sup/src/mixed/strategy/one_for_one/tests.rs
expression: report
---
- "RestartIntensity { max_restarts: 1, within: 18446744073709551615.999999999s }"
- "ADD     [one]"
- "ADD     [two]"
- "ADD     [three]"
- DECIDE
- ">>> Start(one)"
- ">>> Start(two)"
- ">>> Start(three)"
- "STARTED [one] / <:1>"
- "STARTED [two] / <:2>"
- "STARTED [three] / <:3>"
- DECIDE
- "EXITED  <:1>"
- DECIDE
- ">>> Stop(<:3>, Some(\"three\"))"
- ">>> Stop(<:2>, Some(\"two\"))"
- "EXITED  <:2>"
- "EXITED  <:3>"
- DECIDE
- ">>> Quit(normal=false)"
