crates/mm1-sup/src/mixed/strategy/one_for_one/snapshots/mm1_sup__mixed__strategy__one_for_one__tests__mixed::strategy::one_for_one::tests::run::add_started_exited_max_restart_intensity_not_reached.snap
---
source: crates/mm1-sup/src/mixed/strategy/one_for_one/tests.rs
expression: report
---
- "RestartIntensity { max_restarts: 1, within: 30s }"
- "ADD     [one]"
- DECIDE
- ">>> Start(one)"
- "STARTED [one] / <:1>"
- DECIDE
- DELAY 40s
- "EXITED  <:1>"
- DECIDE
- ">>> Start(one)"
- "STARTED [one] / <:2>"
